# keggle_santa

./: CMakeLists.txt  ClarkeWright.cpp  ClarkeWright.h  Gift.cpp  Gift.h  IOfuncs.cpp  IOfuncs.h  Location.cpp  Location.h  NNSearcher.cpp  NNSearcher.h  RandomPointSelector.cpp  RandomPointSelector.h  Route.cpp  Route.h  SCIP_solver.cpp  SCIP_solver.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h  Solution.cpp  Solution.h  const.h  distance_matrix.h  file_provider.cpp  file_provider.h  gecode_optim.cpp  gecode_optim.h  gecodesupport.cpp  gecodesupport.h  main.cpp  phantom_types.h  simple_solver.cpp  simple_solver.h  solution_output.cpp  solution_output.h  types.h
cmake/: FindGecode.cmake
libs/: dependancies
libs/Cbc-2.9.7/: Makefile  config.status  configure.ac  libtool
libs/Cbc-2.9.7/Cbc/: Makefile  cbc-uninstalled.pc  config.status  osi-cbc-uninstalled.pc
libs/Cbc-2.9.7/Cbc/doxydoc/: doxygen.conf
libs/Cbc-2.9.7/Cbc/examples/: Makefile
libs/Cbc-2.9.7/Cbc/src/: CbcBranchAllDifferent.lo  CbcBranchCut.lo  CbcBranchDecision.lo  CbcBranchDefaultDecision.lo  CbcBranchDynamic.lo  CbcBranchLotsize.lo  CbcBranchToFixLots.lo  CbcBranchingObject.lo  CbcCbcParam.lo  CbcClique.lo  CbcCompareDefault.lo  CbcCompareDepth.lo  CbcCompareEstimate.lo  CbcCompareObjective.lo  CbcConsequence.lo  CbcCountRowCut.lo  CbcCutGenerator.lo  CbcCutModifier.lo  CbcCutSubsetModifier.lo  CbcDummyBranchingObject.lo  CbcEventHandler.lo  CbcFathom.lo  CbcFathomDynamicProgramming.lo  CbcFixVariable.lo  CbcFollowOn.lo  CbcFullNodeInfo.lo  CbcGeneral.lo  CbcGeneralDepth.lo  CbcHeuristic.lo  CbcHeuristicDINS.lo  CbcHeuristicDW.lo  CbcHeuristicDive.lo  CbcHeuristicDiveCoefficient.lo  CbcHeuristicDiveFractional.lo  CbcHeuristicDiveGuided.lo  CbcHeuristicDiveLineSearch.lo  CbcHeuristicDivePseudoCost.lo  CbcHeuristicDiveVectorLength.lo  CbcHeuristicFPump.lo  CbcHeuristicGreedy.lo  (+40 more)
libs/Cbc-2.9.7/Cbc/test/: Makefile
libs/Cbc-2.9.7/Cgl/: Makefile  cgl-uninstalled.pc  config.status
libs/Cbc-2.9.7/Cgl/doxydoc/: doxygen.conf
libs/Cbc-2.9.7/Cgl/examples/: Makefile
libs/Cbc-2.9.7/Cgl/src/: CglCutGenerator.lo  CglMessage.lo  CglParam.lo  CglStored.lo  CglTreeInfo.lo  Makefile  config.h  libCgl.la
libs/Cbc-2.9.7/Cgl/test/: Makefile
libs/Cbc-2.9.7/Clp/: Makefile  clp-uninstalled.pc  config.status  osi-clp-uninstalled.pc  osi-clp.pc
libs/Cbc-2.9.7/Clp/doxydoc/: doxygen.conf
libs/Cbc-2.9.7/Clp/examples/: Makefile
libs/Cbc-2.9.7/Clp/src/: Makefile  clp  config.h  libClp.la  libClpSolver.la
libs/Cbc-2.9.7/Clp/test/: Makefile
libs/Cbc-2.9.7/CoinUtils/: Makefile  coinutils-uninstalled.pc  config.status
libs/Cbc-2.9.7/CoinUtils/doxydoc/: doxygen.conf
libs/Cbc-2.9.7/CoinUtils/src/: Makefile  config.h  libCoinUtils.la
libs/Cbc-2.9.7/CoinUtils/test/: Makefile
libs/Cbc-2.9.7/Data/Sample/: Makefile  coindatasample-uninstalled.pc  coindatasample.pc  config.status
libs/Cbc-2.9.7/Data/miplib3/: Makefile  coindatamiplib3-uninstalled.pc  coindatamiplib3.pc  config.status
libs/Cbc-2.9.7/Osi/: Makefile  config.status  osi-uninstalled.pc  osi-unittests-uninstalled.pc
libs/Cbc-2.9.7/Osi/doxydoc/: doxygen.conf
libs/Cbc-2.9.7/Osi/examples/: Makefile
libs/Cbc-2.9.7/Osi/test/: Makefile
libs/Cbc-2.9.7/doxydoc/: doxygen.conf
libs/Cbc-2.9.7/lib/: libCbc.so.3.9.7  libCgl.la  libCgl.so.1.9.7  libClp.la  libClp.so.1.13.9  libCoinUtils.la  libCoinUtils.so.3.10.11  libOsiClp.la  libOsiCommonTests.la  libOsiCommonTests.so.1.12.6
libs/Cbc-2.9.7/lib/pkgconfig/: cbc.pc  cgl.pc  clp.pc  coinutils.pc  osi-cbc.pc  osi-unittests.pc  osi.pc
libs/gecode-4.4.0/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  Makefile.in  changelog.in  cmake_install.cmake  config.status  configure.ac  configure.ac.in  doxygen.conf  doxygen.hh  gecode.m4  gecodegist_automoc.cpp  libgecodedriver.so.41.0  libgecodeflatzinc.so.41  libgecodekernel.so.41  libgecodekernel.so.41.0  libgecodeminimodel.so.41.0  libgecodesearch.so.41.0  libgecodeset.so.41  libgecodesupport.so.41  libgecodesupport.so.41.0  moc_nodestats.cpp  moc_textoutput.cpp
libs/gecode-4.4.0/contribs/quacode/: CMakeLists.txt  FindGecode.cmake
libs/gecode-4.4.0/doxygen/: doxygen.conf.in  doxygen.hh.in
libs/gecode-4.4.0/examples/: CMakeLists.txt  all-interval.cpp  alpha.cpp  archimedean-spiral.cpp  bacp.cpp  bibd.cpp  bin-packing.cpp  black-hole.cpp  car-sequencing.cpp  cartesian-heart.cpp  colored-matrix.cpp  crew.cpp  crossword.cpp  crowded-chess.cpp  descartes-folium.cpp  dominating-queens.cpp  domino.cpp  donald.cpp  efpa.cpp  eq20.cpp  golden-spiral.cpp  golf.cpp  golomb-ruler.cpp  graph-color.cpp  grocery.cpp  hamming.cpp  ind-set.cpp  kakuro.cpp  knights.cpp  langford-number.cpp  magic-sequence.cpp  magic-square.cpp  minesweeper.cpp  money.cpp  multi-bin-packing.cpp  nonogram.cpp  open-shop.cpp  ortho-latin.cpp  partition.cpp  pentominoes.cpp  (+15 more)
libs/gecode-4.4.0/gecode/: driver.hh  flatzinc.hh  float.hh  gist.hh  minimodel.hh  set.hh
libs/gecode-4.4.0/gecode/driver/: options.cpp  options.hpp  script.cpp  script.hpp
libs/gecode-4.4.0/gecode/flatzinc/: ast.hh  (+10 more)
libs/gecode-4.4.0/misc/: fixmanifest.perl  fixproperties.sh  genchangelog.perl  genlicense.perl  genrc.perl  genstatistics.perl  gentxtchangelog.perl  makedepend.perl
libs/gecode-4.4.0/test/: afc.cpp  array.cpp  assign.cpp  assign.hh  branch.cpp  branch.hh  brancher-handle.cpp  flatzinc.cpp  flatzinc.hh  float.cpp  float.hh  float.hpp  int.cpp  int.hh  int.hpp  ldsb.cpp  nogoods.cpp  search.cpp  set.cpp  set.hh  set.hpp
libs/nanoflann-1.1.9/: Makefile  cmake_install.cmake  cmake_uninstall.cmake  nanoflann.pc
libs/nanoflann-1.1.9/examples/: Makefile  cmake_install.cmake  pointcloud_example.cpp
libs/nanoflann-1.1.9/tests/: Makefile  cmake_install.cmake  unit_tests
libs/scipoptsuite-3.2.0/: Makefile  Makefile.doit  gcg-2.1.0.tgz  soplex-2.2.0.tgz  ug-0.8.0.tgz  zimpl-3.3.3.tgz
libs/scipoptsuite-3.2.0/zimpl-3.3.3/: CHANGELOG  Makefile  Makefile.nmake
pyutils/: cpp_input_data_generator.py  main.py
testing/: CMakeLists.txt  evaluation_test.cpp  evaluation_test.h  gift_testing_data.h
(+822 files in other folders)
